--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://danceclassdashboard.vercel.app/",
+  "proxy": "https://dancedashboard-api.onrender.com",
   "dependencies": {
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.5",
