--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@dotlottie/player-component": "^2.7.12",
+    "@faker-js/faker": "^8.4.1",
     "@fvilers/disable-react-devtools": "^1.3.0",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
