--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "html-pdf": "^3.0.1",
     "js-cookie": "^3.0.5",
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
