--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.30",
     "html-pdf": "^3.0.1",
     "js-cookie": "^3.0.5",
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "tw-elements-react": "^1.0.0-alpha-end",
     "web-vitals": "^2.1.4"
