--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "framer-motion": "^11.3.30",
     "html-pdf": "^3.0.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.487.0",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
