--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-table": "^7.8.0",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.17",
     "tw-elements-react": "^1.0.0-alpha-end",
     "web-vitals": "^2.1.4"
   },
